--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,6 +4,7 @@
 <div>
   <app-music-player></app-music-player>
 </div>
-<section style="margin-top: 36px;">
+<section style="margin-top: 40px;padding: 0 10px;">
   <router-outlet></router-outlet>
 </section>
+<app-loading [isLoading]="loading"></app-loading>
