--- a/src/app/music-player/music-player.component.html
+++ b/src/app/music-player/music-player.component.html
@@ -1,6 +1,6 @@
 <div>
   <div style="position: fixed;z-index: 99;" class="animated" [ngClass]="{'slideInLeft': slideIn, 'slideOutLeft': slideOut}">
-    <audio loop autoplay #audio>
+    <audio loop #audio>
       <source [src]="song_url" type="audio/mp3">
     </audio>
     <div class="player-box" style="z-index: 99">
