--- a/src/app/art-area/art-area.component.html
+++ b/src/app/art-area/art-area.component.html
@@ -1,16 +1,16 @@
 <div class="animated" [ngClass]="{'fadeInDown': !is_loading}">
   <div *ngFor="let article of articles;let i = index">
     <p>
-      <!-- <button type="button" class="btn btn-outline-primary" (click)="is_collapsed_arr[i] = !is_collapsed_arr[i]"
+      <button type="button" class="btn btn-outline-primary" (click)="is_collapsed_arr[i] = !is_collapsed_arr[i]"
               [attr.aria-expanded]="!is_collapsed_arr[i]" aria-controls="collapse">
-        {{article.title}}
-      </button> -->
-      <a href="javascript:void(0);" (click)="is_collapsed_arr[i] = !is_collapsed_arr[i]" [attr.aria-expanded]="!is_collapsed_arr[i]" aria-controls="collapse">{{article.title}}</a>
+        【{{article.title}}】&nbsp;&nbsp;发表日期:&nbsp;{{article.time}}
+      </button>
+      <!-- <a href="javascript:void(0);" (click)="is_collapsed_arr[i] = !is_collapsed_arr[i]" [attr.aria-expanded]="!is_collapsed_arr[i]" aria-controls="collapse">{{article.title}}</a> -->
     </p>
     <div id="collapse{{i}}" [ngbCollapse]="is_collapsed_arr[i]" class="col-xs-12">
       <div class="card">
-        <div class="card-block">
-          {{article.content}}
+        <div class="card-block" [innerHTML]="article.content">
+          
         </div>
       </div>
     </div>
