--- a/src/app/tech-area/tech-area.component.html
+++ b/src/app/tech-area/tech-area.component.html
@@ -1,14 +1,16 @@
-<div *ngFor="let article of articles;let i = index">
-  <p>
-    <button type="button" class="btn btn-outline-primary" (click)="is_collapsed_arr[i] = !is_collapsed_arr[i]"
-            [attr.aria-expanded]="!is_collapsed_arr[i]" aria-controls="collapse">
-      {{article.title}}
-    </button>
-  </p>
-  <div id="collapse{{i}}" [ngbCollapse]="is_collapsed_arr[i]">
-    <div class="card">
-      <div class="card-block">
-        {{article.content}}
+<div class="animated" [ngClass]="{'fadeInDown': !is_loading}">
+  <div *ngFor="let article of articles;let i = index">
+    <p>
+      <button type="button" class="btn btn-outline-primary" (click)="is_collapsed_arr[i] = !is_collapsed_arr[i]"
+              [attr.aria-expanded]="!is_collapsed_arr[i]" aria-controls="collapse">
+        【{{article.title}}】&nbsp;&nbsp;发表日期:&nbsp;{{article.time}}
+      </button>
+    </p>
+    <div id="collapse{{i}}" [ngbCollapse]="is_collapsed_arr[i]">
+      <div class="card">
+        <div class="card-block" [innerHTML]="article.content">
+          
+        </div>
       </div>
     </div>
   </div>
