add tooltip and some optimize

--- a/src/app/art-area/art-area.component.html
+++ b/src/app/art-area/art-area.component.html
@@ -3,7 +3,7 @@
     <p>
       <button type="button" class="btn btn-outline-primary" (click)="is_collapsed_arr[i] = !is_collapsed_arr[i]"
               [attr.aria-expanded]="!is_collapsed_arr[i]" aria-controls="collapse">
-        【{{article.title}}】&nbsp;&nbsp;发表日期:&nbsp;{{article.time}}
+        【{{article.title}}】&nbsp;&nbsp;发布日期:&nbsp;{{article.time}}
       </button>
       <!-- <a href="javascript:void(0);" (click)="is_collapsed_arr[i] = !is_collapsed_arr[i]" [attr.aria-expanded]="!is_collapsed_arr[i]" aria-controls="collapse">{{article.title}}</a> -->
     </p>
