--- a/src/app/music-player/music-player.component.html
+++ b/src/app/music-player/music-player.component.html
@@ -1,24 +1,24 @@
 <div>
-  <div style="position: fixed;z-index: 99;" class="animated" [ngClass]="{'slideInLeft': slideIn, 'slideOutLeft': slideOut}">
+  <div style="position: fixed;right: 0;z-index: 99;" class="animated" [ngClass]="{'slideInRight': slideIn, 'slideOutRight': slideOut}">
     <audio autoplay loop #audio>
       <source [src]="song_url" type="audio/mp3">
     </audio>
     <div class="player-box" style="z-index: 99">
-      <img [ngClass]="{'cover': true, 'cover-rotate-running': cover_rotate && !is_stop, 'cover-rotate-pause': !cover_rotate && !is_stop}" [src]="image_url" [alt]="name">
+      <span class="glyphicon glyphicon-remove" (click)="tooglePlayer('player_slide_out')"></span>
+      <span [ngClass]="{'click-animation': click_animation[2], 'active': search_box_obj.active}" (click)="clickSearch($event)" class="glyphicon glyphicon-search player-btn"></span>
+      <a [href]="song_url" download style="color: #ddd;"><span [ngClass]="{'click-animation': click_animation[3]}" (click)="download($event)" class="glyphicon glyphicon-download-alt"></span></a>
+      <marquee class="music-info" scrollamount=2 onmouseover="this.stop()" onmouseout="this.start()">{{name}}-{{artist}}</marquee>
       <span [ngClass]="{'click-animation': click_animation[0]}" (click)="playControll('play', $event)" *ngIf="!toogle_play" class="glyphicon glyphicon-play player-btn"></span>
       <span [ngClass]="{'click-animation': click_animation[0]}" (click)="playControll('pause', $event)" *ngIf="toogle_play" class="glyphicon glyphicon-pause player-btn"></span>
       <span [ngClass]="{'click-animation': click_animation[1]}" (click)="playControll('stop', $event)" class="glyphicon glyphicon-stop player-btn"></span>
-      <marquee class="music-info" scrollamount=2 onmouseover="this.stop()" onmouseout="this.start()">{{name}}-{{artist}}</marquee>
-      <span [ngClass]="{'click-animation': click_animation[2], 'active': search_box_obj.active}" (click)="clickSearch($event)" class="glyphicon glyphicon-search player-btn"></span>
-      <a [href]="song_url" download style="color: #ddd;"><span [ngClass]="{'click-animation': click_animation[3]}" (click)="download($event)" class="glyphicon glyphicon-download-alt"></span></a>      
-      &nbsp;<span class="glyphicon glyphicon-remove" (click)="tooglePlayer('player_slide_out')"></span>
+      <img [ngClass]="{'cover': true, 'cover-rotate-running': cover_rotate && !is_stop, 'cover-rotate-pause': !cover_rotate && !is_stop}" [src]="image_url" [alt]="name">
     </div>
     <div class="search-box animated" [ngClass]="{'fadeInDown': search_box_obj.fadeInDown}" *ngIf="search_box_obj.show">
       <div class="input-group">
-        <input (keyup)="searchMusic(search_box_obj.search_content, $event)" [(ngModel)]="search_box_obj.search_content" type="text" class="form-control search" placeholder="Search for...">
         <span class="input-group-btn">
           <button class="btn btn-default" style="background-color: #444;border-color: #555;color: #ddd;outline: none;" type="button" (click)="searchMusic(search_box_obj.search_content)">Go!</button>
         </span>
+        <input (keyup)="searchMusic(search_box_obj.search_content, $event)" [(ngModel)]="search_box_obj.search_content" type="text" class="form-control search" placeholder="Search for...">
       </div>
       <div class="song-list" *ngFor="let song_info of song_info_arr;let i = index" (click)="selectMusic(song_info, i)" title="{{song_info.name}}-{{song_info.artist}} | {{song_info.album}}">
         <span class="glyphicon glyphicon-play-circle" *ngIf="search_box_obj.index === i"></span>
@@ -27,7 +27,7 @@
       </div>
     </div>
   </div>
-  <div class="mini-player animated" [ngClass]="{'slideInLeft': slideOut, 'slideOutLeft': slideIn}" style="position: fixed;cursor: pointer;z-index: 99;" (click)="tooglePlayer('mini_slide_out')">
+  <div class="mini-player animated" [ngClass]="{'slideInRight': slideOut, 'slideOutRight': slideIn}" style="position: fixed;right: 0;cursor: pointer;z-index: 99;" (click)="tooglePlayer('mini_slide_out')">
     <span class="glyphicon glyphicon-headphones"></span>
   </div>
 </div>
