--- a/src/app/top/top.component.html
+++ b/src/app/top/top.component.html
@@ -1,16 +1,16 @@
 <div class="col-xs-12 box">
-    <div class="left col-xs-6">
+    <div class="left col-xs-6" placement="bottom" ngbTooltip="这是艺术区( • ̀ω•́ )✧">
         <video (click)="route('art')" (mouseover)="play($event)" (mouseout)="stop($event)" loop poster="../../assets/img/guitar_1.png" class="bgv-left">
             <source src="../../assets/media/guitar_clip.mp4" type="video/mp4">
         </video>
     </div>
     <div class="logo"></div>
-    <div class="right col-xs-6">
+    <div class="right col-xs-6" placement="bottom" ngbTooltip="这是技术区←_←">
         <video (click)="route('tech')" (mouseover)="play($event)" (mouseout)="stop($event)" loop poster="../../assets/img/code_1.png" class="bgv-right">
             <source src="../../assets/media/code_clip.mp4" type="video/mp4">
         </video>
     </div>
-    <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
+    <div class="flip-container" ontouchstart="this.classList.toggle('hover');" placement="bottom" ngbTooltip="这是主页(^▽^)">
         <div class="flipper">
         <div class="front">
             <div class="avatar"></div>
