--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,5 +8,6 @@
   <section style="margin-top: 40px;padding: 0 10px;">
     <router-outlet></router-outlet>
   </section>
+  <!-- <app-barrage></app-barrage> -->
   <app-loading [isLoading]="loading"></app-loading>
 </div>
